--- a/sass/pages/_how-it-works.scss
+++ b/sass/pages/_how-it-works.scss
@@ -7,10 +7,10 @@
 
   @include respond-to($lg) {
     padding: 2.5rem 1.7rem;
+  }
 
-    @include respond-to($xl) {
-      padding: 3.12rem 1.7rem;
-    }
+  @include respond-to($xl) {
+    padding: 3.12rem 1.7rem;
   }
 
   &__container {
@@ -45,6 +45,7 @@
 
     @include respond-to($xl) {
       margin-left: -8px;
+      gap: 2.5rem;
     }
   }
 
@@ -67,6 +68,10 @@
     @include respond-to($lg) {
       padding-left: 2.5rem;
       gap: 1.875rem;
+    }
+
+    @include respond-to($xl) {
+      flex-grow: 1;
     }
   }
 
